# gchristmas2024

./: .gitmodules  CMakeLists.txt  readme.md
content/: sketch0.ase
libs/raylib/examples/core/: core_2d_camera  core_2d_camera_mouse_zoom  core_2d_camera_platformer  core_2d_camera_split_screen
src/: game.h  license.txt  main.cpp
